# Siphon_Sol

./: .env.example  .gitignore  .gitmodules  README.md  about.md  next.config.js  package-lock.json  package.json  vercel.json
circuits-noir/: Nargo.toml  Prover.toml  README.md
circuits-noir/src/: commitment.nr  main.nr  merkle.nr
contract/: hardhat.config.cjs
contract/cache/: solidity-files-cache.json
contract/ignition/modules/: DeployV3.ts
contract/src/: Entrypoint.sol
docs/: aztec.md  helius.md  range.md  strategies_flow_diagram.md
public/idl/: matching_engine.json
relayer/: create-alt.js  package-lock.json  package.json  server.js
scripts/: check-zk-pool.ts  convert-key.js  get-base58-key.js  initialize-zk-pool.js  test-executor.ts
siphon/: Anchor.toml  Cargo.toml  README.md  package-lock.json  tsconfig.json
siphon/programs/siphon-zk-pool/: Cargo.toml
siphon/programs/siphon-zk-pool/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
siphon/programs/siphon-zk-pool/src/instructions/: deposit_sol.rs  deposit_spl.rs  initialize.rs  mod.rs  update_root.rs  withdraw_sol.rs  withdraw_spl.rs
siphon/scripts/: build-sbf.sh
siphon/tests/: siphon.ts
src/app/: page.tsx
src/config/: env.ts
src/crypto/: arcium.ts  x25519Store.ts
src/hooks/: useBalance.ts  useUserLedger.ts
src/lib/: arciumHelpers.ts  constants.ts  encryption.ts  keyManagement.ts  matchingEngine.ts  solanaWallet.ts
src/per/: perClient.ts  perMatchingClient.ts
src/solana/: idl.ts  matchingEngineClient.ts  pdas.ts
swap/: swap-with-custom-router.js
(+54 files in other folders)
