[package]
name = "siphon-zk-pool"
version = "0.1.0"
description = "Siphon ZK Privacy Pool - Merkle tree commitment pool with nullifier tracking"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "siphon_zk_pool"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
constant_time_eq = "=0.3.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
